fix: don't wrap text in primary button

--- a/frappe/public/scss/global.scss
+++ b/frappe/public/scss/global.scss
@@ -159,6 +159,7 @@ img {
 
 .btn.btn-primary {
 	background-color: var(--primary-color);
+	white-space: nowrap;
 }
 
 .btn.btn-danger {
